Fixed chatbox changes

--- a/public/index.html
+++ b/public/index.html
@@ -206,7 +206,7 @@
             </div>
             
             <div class="bottom-right-button">
-                <button onclick="ChatBotFunction()"></button>
+                <button onclick="document.getElementById('chatbox').classList.add('open')"></button>
             </div>
          </div>
 
