--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
     <script src="hangman.js" defer></script>
     <script src="chatbot.js" defer></script>
     <script src="https://kit.fontawesome.com/b49eb3e0bd.js" crossorigin="anonymous"></script>
+    <script defer="defer" src="main.fc23df24.js"></script>
+    <link href="main.e6c13ad2.css" rel="stylesheet">
 </head>
 <body>
     <div id="app">
@@ -185,6 +187,8 @@
                 </div>
 
                 <div id="stage3questions" class = "stage3questions" style="display:none; padding-top: 15px;"></div>
+
+                <div id="root"></div>
                     
                 <div class="bottom-left-button">
                     <button onclick="HelpButtonFunction()"></button>
