--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,7 @@
                     </div>
 
                     <div id="stage1questions" class = "stage1questions" style="display:none; padding-top: 15px;"></div>
-                    <div id="stage1hangman" class = "stage1hangman" style="display:none; padding-top: 15px;"></div>
+                    <div id="stage1hangman" class = "hangman" style="display:none; padding-top: 15px;"></div>
                 
                 </div>
                 <div class="bottom-left-button">
@@ -142,6 +142,7 @@
                     </div>
 
                     <div id="stage2questions" class = "stage2questions" style="display:none; padding-top: 15px;"></div>
+                    <div id="stage2hangman" class = "hangman" style="display:none; padding-top: 15px;"></div>
 
                 </div>
                 <div class="bottom-left-button">
