Cool lil animations

--- a/public/index.html
+++ b/public/index.html
@@ -180,7 +180,7 @@
                     <div id="welcome-box3" class="welcome-box" style="display: block;">
                         <div class="welcome-box-content">
                             <div id="welcomeMessage3">
-                                <p>You’ve demonstrated impressive financial responsibility and achieved a high credit score, unlocking this next exciting phase of your journey—mortgaging your dream home. Before we begin, here are some definitions of important key terms to know when dealing with mortgages!</p>
+                                <p>You've demonstrated impressive financial responsibility and achieved a high credit score, unlocking this next exciting phase of your journey—mortgaging your dream home. Before we begin, here are some definitions of important key terms to know when dealing with mortgages!</p>
                                 <img src="img/house.png" alt="House Image" id="house-image">
 
                             <button class="button button-fill-ios" onclick="displayMoreContentStage3()">Next</button>
@@ -206,7 +206,7 @@
             <div class="block-title" style="padding-bottom:10px"><h2> Resources</h2></div>
             
 
-            <div class="list accordion-list">
+            <div class="list accordion-list" data-transition="f7-parallax">
                 <!-- Card 1 -->
                 <div class="accordion-item">
                     <div class="item-content accordion-item-toggle">
