Changed chatbox open function for context integration

--- a/public/index.html
+++ b/public/index.html
@@ -197,7 +197,7 @@
                 </div>
                 
                 <div class="bottom-right-button">
-                    <button onclick="document.getElementById('chatbox').classList.add('open')"></button>
+                    <button onclick="OpenChatbox();"></button>
                 </div>
             </div>
          </div>
