--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
                 </div>
                 
                 <div class="bottom-right-button">
-                    <button onclick="document.getElementById('chatbox').classList.add('open')"></button>
+                    <button onclick="OpenChatbox();"></button>
                 </div>
             </div>
 
